quit a team (#258)
* enable player

* some fix

* use leader in filter

* some fix

* some optimize
